# musify-cli

./: .flake8  .gitignore  README.md  logging.yml  main.py  pyproject.toml  report.txt  test.yml  test_libraries.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: validate.yml
_config/: libraries.yml
musify_cli/: __config.py  __init__.py  __main__.py  cli.py  config.py  exception.py  main.py  printers.py  processor.py
musify_cli/config/: __init__.py  core.py  loader.py
musify_cli/config/operations/: __init__.py  filters.py  signature.py  tags.py
musify_cli/config/operations/tagger/: __init__.py  _getter.py  _setter.py  _tagger.py
musify_cli/log/: __init__.py  filter.py  handlers.py
musify_cli/manager/: __init__.py  _core.py  _paths.py  _processor.py
musify_cli/parser/: __init__.py  _core.py  _library.py  _setup.py  _utils.py  core.py  library.py  types.py  utils.py
musify_cli/parser/operations/: filters.py  signature.py  tags.py
musify_cli/parser/operations/tagger/: _getter.py  _setter.py  _tagger.py
musify_cli/tagger/: getter.py  setter.py
scripts/: android_sync.bat  check.py  filesync.sh  move.py  photosort.sh
src/: __init__.py
tests/: __test_config.py  conftest.py  test_config.py  test_utilities.py  utils.py
tests/__resources/: test_config.yml  test_libraries.yml  test_logging.yml  test_tagging.yml
tests/config/: test_core.py  test_loader.py
tests/config/operations/: test_filters.py  test_signature.py  test_tags.py
tests/config/operations/tagger/: test_getter.py  test_setter.py  test_tagger.py
tests/log/: test_filter.py  test_handlers.py
tests/manager/: test_core.py  test_manager.py  test_paths.py  test_processor.py  utils.py
tests/mocks/: core.py  local.py  remote.py
tests/parser/: test_core.py  test_library.py  test_loader.py  test_utils.py  utils.py
tests/parser/operations/: test_filters.py  test_signature.py  test_tags.py
tests/parser/operations/tagger/: test_getter.py  test_setter.py  test_tagger.py
tests/tagger/: test_getter.py  test_setter.py
