[build-system]
requires = ["hatchling~=1.21"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "musify-cli"
authors = [
  { name="George Martin Marino", email="gm.engineer+musify@pm.me" },
]
description = "CLI operations for Musify package"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "musify[all]",
    "pyyaml",
    "jsonargparse[signatures]~=4.29",
    "pyfiglet~=1.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "pytest-xdist~=3.6",
    "aioresponses~=0.7",
]
dev = [
    "musify_cli[test]",
    "flake8",
    "grip",
]

[project.urls]
"Source code" = "https://github.com/geo-martino/musify-cli"
Issues = "https://github.com/geo-martino/musify-cli/issues"

[tool.hatch.version]
path = "musify_cli/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["musify_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-color=yes"
markers = [
    "slow: marks test as slow (deselect with '-m \"not slow\"')",
    "manual: marks tests to be run only when manually directed to by the developer",
]
asyncio_mode = "auto"
